--- a/package.json
+++ b/package.json
@@ -3,13 +3,34 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --recursive test",
+    "test:coverage": "nyc npm test",
+    "test:unit": "mocha --recursive test/middleware test/models test/routes",
+    "test:integration": "mocha --recursive test/integration"
   },
   "dependencies": {
+    "body-parser": "^1.13.3",
+    "bootstrap": "^4.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-nunjucks": "^2.2.3",
+    "generator-express": "^2.17.2",
     "morgan": "~1.9.1",
-    "request": "^2.88.2"
+    "nunjucks": "^3.2.0",
+    "request": "^2.88.2",
+    "serve-favicon": "^2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "debug": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.2",
+    "gulp-livereload": "^3.8.0",
+    "gulp-plumber": "^1.0.0",
+    "mocha": "^4.0.1",
+    "nyc": "^10.0.0",
+    "supertest": "^2.0.0"
   }
 }
